comment fixes and some spacing changes

--- a/resources/assets/styles/archive/_entry-content.scss
+++ b/resources/assets/styles/archive/_entry-content.scss
@@ -1,3 +1,7 @@
 .entry-content {
   font-size: 1.2rem;
+
+  h2 {
+    @extend .mt-5;
+  }
 }
