--- a/resources/assets/styles/elements/_comments.scss
+++ b/resources/assets/styles/elements/_comments.scss
@@ -13,7 +13,8 @@
       .comment-body {
         @extend .col-12;
         @extend .col-xl-6;
-        @extend .ms-5;
+        @extend .ms-3;
+        @extend .ms-lg-5;
         border-left: 3px solid $dark;
       }
     }
@@ -32,7 +33,7 @@
 
     cite.author {
       @extend .me-3;
-      @extend .text-primary;
+      @extend .fw-bold;
       font-style: normal;
     }
 
@@ -43,8 +44,9 @@
     }
   }
 
-  .comments-title {
-    @extend .d-none;
+  .comment-reply-link {
+    @extend .btn;
+    @extend .btn-dark;
   }
 
   #reply-title {
